--- a/admin/css/ste-style.css
+++ b/admin/css/ste-style.css
@@ -1506,35 +1506,35 @@ font-size: 14px;
     text-indent: -9999px;
     transform-origin: 50% 50%;
     width: 0;
-    left:51%;
+    left:53%;
     bottom: 110px;
   }
   .down {
     -webkit-animation: downarrow 0.6s infinite alternate ease-in-out;
     border-top:2em solid;
   }
-
-
+  .setting-card{
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    height: 480px;
+    width: 100%;
+    background-clip: border-box;
+    border: 1px solid rgba(0, 0, 0, 0.125);
+    border-radius: 0.25rem;
+  }
+  .setting-card-body {
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    padding: 1.25rem;
+}
   /* Message Box on Drag Fields */
-  
-  @import url('https://fonts.googleapis.com/css?family=Barlow');
-      
-    font-family: 'Barlow', sans-serif;
- 
-.container {
-	width: 100%;
-	position: relative;
-	overflow: hidden;
-}
-a {
-	text-decoration: none;
-}
-h1.main, p.demos {
-	-webkit-animation-delay: 18s;
-	-moz-animation-delay: 18s;
-	-ms-animation-delay: 18s;
-	animation-delay: 18s;
-}
+
 .sp-container {
 	position: fixed;
 	top: 0px;
@@ -1542,18 +1542,10 @@ h1.main, p.demos {
 	width: 100%;
 	height: 100%;
 	z-index: 0;
-	background: -webkit-radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3) 35%, rgba(0, 0, 0, 0.7));
-	background: -moz-radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3) 35%, rgba(0, 0, 0, 0.7));
-	background: -ms-radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3) 35%, rgba(0, 0, 0, 0.7));
-	background: radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3) 35%, rgba(0, 0, 0, 0.7));
-}
-.sp-content {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	left: 0px;
-	top: 0px;
-	z-index: 1000;
+	background: -webkit-radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1) 5%, rgba(0, 0, 0, 0.2));
+	background: -moz-radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1) 5%, rgba(0, 0, 0, 0.2));
+	background: -ms-radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1) 5%, rgba(0, 0, 0, 0.2));
+	background: radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1) 5%, rgba(0, 0, 0, 0.2));
 }
 .sp-container h2 {
 	position: absolute;
@@ -1562,148 +1554,40 @@ h1.main, p.demos {
 	line-height: 100px;
 	height: 90px;
 	margin-top: -50px;
-	font-size: 60px;
+	font-size: 50px;
     width: 100%;
 	text-align: center;
-	color: #2F333B;
+	color: #5A6268;
 	-webkit-animation: blurFadeInOut 3s ease-in backwards;
 	-moz-animation: blurFadeInOut 3s ease-in backwards;
 	-ms-animation: blurFadeInOut 3s ease-in backwards;
 	animation: blurFadeInOut 3s ease-in backwards;
 }
-.sp-container h2.frame-1 {
-	-webkit-animation-delay: 0s;
-	-moz-animation-delay: 0s;
-	-ms-animation-delay: 0s;
-	animation-delay: 0s;
-}
-.sp-container h2.frame-2 {
-	-webkit-animation-delay: 3s;
-	-moz-animation-delay: 3s;
-	-ms-animation-delay: 3s;
-	animation-delay: 3s;
-}
-.sp-container h2.frame-3 {
-	-webkit-animation-delay: 6s;
-	-moz-animation-delay: 6s;
-	-ms-animation-delay: 6s;
-	animation-delay: 6s;
-}
-.sp-container h2.frame-4 {
-	font-size: 200px;
-	-webkit-animation-delay: 9s;
-	-moz-animation-delay: 9s;
-	-ms-animation-delay: 9s;
-	animation-delay: 9s;
-}
-.sp-container h2.frame-5 {
-	-webkit-animation: none;
-	-moz-animation: none;
-	-ms-animation: none;
-	animation: none;
-	color: transparent;
-	text-shadow: 0px 0px 1px #fff;
-}
-.sp-container h2.frame-5 span {
-	-webkit-animation: blurFadeIn 3s ease-in 12s backwards;
-	-moz-animation: blurFadeIn 1s ease-in 12s backwards;
-	-ms-animation: blurFadeIn 3s ease-in 12s backwards;
-	animation: blurFadeIn 3s ease-in 12s backwards;
-	color: transparent;
-	text-shadow: 0px 0px 1px #fff;
-}
-.sp-container h2.frame-5 span:nth-child(2) {
-	-webkit-animation-delay: 13s;
-	-moz-animation-delay: 13s;
-	-ms-animation-delay: 13s;
-	animation-delay: 13s;
-}
-.sp-container h2.frame-5 span:nth-child(3) {
-	-webkit-animation-delay: 14s;
-	-moz-animation-delay: 14s;
-	-ms-animation-delay: 14s;
-	animation-delay: 14s;
-}
-.sp-globe {
-	position: absolute;
-	width: 282px;
-	height: 273px;
-	left: 50%;
-	top: 50%;
-	margin: -137px 0 0 -141px;
-	-webkit-animation: fadeInBack 3.6s linear 14s backwards;
-	-moz-animation: fadeInBack 3.6s linear 14s backwards;
-	-ms-animation: fadeInBack 3.6s linear 14s backwards;
-	animation: fadeInBack 3.6s linear 14s backwards;
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
-	filter: alpha(opacity=30);
-	opacity: 0.3;
-	-webkit-transform: scale(5);
-	-moz-transform: scale(5);
-	-o-transform: scale(5);
-	-ms-transform: scale(5);
-	transform: scale(5);
-}
-.sp-circle-link {
-	position: absolute;
-	left: 50%;
-	bottom: 100px;
-	margin-left: -50px;
-	text-align: center;
-	line-height: 100px;
-	width: 100px;
-	height: 100px;
-	background: #D4D7E2;
-	color: #3f1616;
-	font-size: 25px;
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	border-radius: 50%;
-	-webkit-animation: fadeInRotate 1s linear 16s backwards;
-	-moz-animation: fadeInRotate 1s linear 16s backwards;
-	-ms-animation: fadeInRotate 1s linear 16s backwards;
-	animation: fadeInRotate 1s linear 16s backwards;
-	-webkit-transform: scale(1) rotate(0deg);
-	-moz-transform: scale(1) rotate(0deg);
-	-o-transform: scale(1) rotate(0deg);
-	-ms-transform: scale(1) rotate(0deg);
-	transform: scale(1) rotate(0deg);
-}
-.sp-circle-link:hover {
-	background: #85373b;
-	color:#D4D7E2;
-}
 @-webkit-keyframes blurFadeInOut {
 	0% {
 		opacity: 0;
-		text-shadow: 0px 0px 40px #D4D7E2;
 		-webkit-transform: scale(1.3);
 	}
 	20%, 75% {
 		opacity: 1;
-		text-shadow: 0px 0px 1px #D4D7E2;
 		-webkit-transform: scale(1);
 	}
 	100% {
 		opacity: 0;
-		text-shadow: 0px 0px 50px #D4D7E2;
 		-webkit-transform: scale(0);
 	}
 }
 @-webkit-keyframes blurFadeIn {
 	0% {
 		opacity: 0;
-		text-shadow: 0px 0px 40px #D4D7E2;
 		-webkit-transform: scale(1.3);
 	}
 	50% {
 		opacity: 0.5;
-		text-shadow: 0px 0px 10px #D4D7E2;
 		-webkit-transform: scale(1.1);
 	}
 	100% {
 		opacity: 1;
-		text-shadow: 0px 0px 1px #D4D7E2;
 		-webkit-transform: scale(1);
 	}
 }
@@ -1736,29 +1620,24 @@ h1.main, p.demos {
 @-moz-keyframes blurFadeInOut {
 	0% {
 		opacity: 0;
-		text-shadow: 0px 0px 40px #D4D7E2;
 		-moz-transform: scale(1.3);
 	}
 	20%, 75% {
 		opacity: 1;
-		text-shadow: 0px 0px 1px #D4D7E2;
 		-moz-transform: scale(1);
 	}
 	100% {
 		opacity: 0;
-		text-shadow: 0px 0px 50px #D4D7E2;
 		-moz-transform: scale(0);
 	}
 }
 @-moz-keyframes blurFadeIn {
 	0% {
 		opacity: 0;
-		text-shadow: 0px 0px 40px #D4D7E2;
 		-moz-transform: scale(1.3);
 	}
 	100% {
 		opacity: 1;
-		text-shadow: 0px 0px 1px #D4D7E2;
 		-moz-transform: scale(1);
 	}
 }
@@ -1791,34 +1670,28 @@ h1.main, p.demos {
 @keyframes blurFadeInOut {
 	0% {
 		opacity: 0;
-		text-shadow: 0px 0px 40px #D4D7E2;
 		transform: scale(1.3);
 	}
 	20%, 75% {
 		opacity: 1;
-		text-shadow: 0px 0px 1px #D4D7E2;
 		transform: scale(1);
 	}
 	100% {
 		opacity: 0;
-		text-shadow: 0px 0px 50px #D4D7E2;
 		transform: scale(0);
 	}
 }
 @keyframes blurFadeIn {
 	0% {
 		opacity: 0;
-		text-shadow: 0px 0px 40px #D4D7E2;
 		transform: scale(1.3);
 	}
 	50% {
 		opacity: 0.5;
-		text-shadow: 0px 0px 10px #D4D7E2;
 		transform: scale(1.1);
 	}
 	100% {
 		opacity: 1;
-		text-shadow: 0px 0px 1px #D4D7E2;
 		transform: scale(1);
 	}
 }
