--- a/admin/css/ste-style.css
+++ b/admin/css/ste-style.css
@@ -14,17 +14,17 @@
 
 ::-moz-placeholder {
     /* Firefox 19+ */
-    color:#6C757D;
+    color: #6C757D;
 }
 
 :-ms-input-placeholder {
     /* IE 10+ */
-    color:#6C757D;
+    color: #6C757D;
 }
 
 :-moz-placeholder {
     /* Firefox 18- */
-    color:#6C757D;
+    color: #6C757D;
 }
 
 
@@ -74,12 +74,14 @@
     float: left;
 }
 
-.ste-mb-1.form-group.form_builder_field_preview.col50p .ste-col-60{
-    width: 100%;  
+.ste-mb-1.form-group.form_builder_field_preview.col50p .ste-col-60 {
+    width: 100%;
 }
+
 .ste-col-40 {
     width: 40%;
 }
+
 .ste-col-60 {
     width: 70%;
     /* margin-left: 10px; */
@@ -89,14 +91,15 @@
     width: 45% !important;
     /* margin-right: 40px; */
     margin-left: 20px;
-    margin-bottom:20px;
+    margin-bottom: 20px;
 }
 
 .stedb-li-row-flex {
-    display:flex;
+    display: flex;
     min-height: 100px;
     padding: 0px 10px;
 }
+
 .stedb-col {
     width: 100%;
     /* display: inline-block; */
@@ -104,24 +107,27 @@
     flex-basis: 0;
     -webkit-box-flex: 1;
     margin: 10px 10px 10px 10px;
-    
 }
+
 .stedb-col-50 {
     max-width: 100%;
     /* display: inline-block; */
     flex-grow: 1;
     flex-basis: 0;
     -webkit-box-flex: 1;
-    
 }
+
 .ste-col-social {
     width: 50% !important;
     margin-right: 40px;
     margin-left: 20px;
 }
+
 .ste-col-40 {
     width: 40%;
 }
+
+
 /* Display Classes */
 
 .ste-block {
@@ -196,7 +202,6 @@ a.ste-tab-item {
     padding: 10px;
     width: 50% !important;
     margin-bottom: 50px;
-
     cursor: all-scroll;
 }
 
@@ -207,9 +212,9 @@ a.ste-tab-item {
     margin-bottom: 15px;
     margin-top: 15px;
     padding-top: 20px;
-    padding-bottom:20px;
-    
+    padding-bottom: 20px;
 }
+
 .ste-builder-field.ste-row-full:hover {
     border: 1px dashed black;
     background: #F2F6FB;
@@ -238,7 +243,7 @@ a.ste-tab-item {
 }
 
 .remove_social_bal_field,
-.remove_bal_field, 
+.remove_bal_field,
 .remove_linkedin_bal_field {
     background-color: #ffff;
     border: none;
@@ -436,10 +441,11 @@ a.ste-tab-item {
     display: block;
 }
 
-.error-msg-email{
+.error-msg-email {
     color: #f31313;
     margin-bottom: 6px
 }
+
 .ste-btn-remove-option {
     background: #F1F1F1;
     /* width: 50px; */
@@ -450,7 +456,8 @@ a.ste-tab-item {
     font-size: 12px;
     border-radius: 5px;
 }
-.loaderbg{
+
+.loaderbg {
     background: #000;
     opacity: 0.5;
     position: fixed;
@@ -462,13 +469,16 @@ a.ste-tab-item {
     z-index: 99999;
     text-align: center;
 }
-.loaderbg img{
+
+.loaderbg img {
     margin-top: 12%;
 }
-#verify_email_stedb{
+
+#verify_email_stedb {
     font-size: 14px;
     font-weight: 600;
 }
+
 
 /* responsive design */
 
@@ -923,12 +933,12 @@ img#loader1 {
     margin-right: 5px;
 }
 
-
-.ste-round-setting-icon{
+.ste-round-setting-icon {
     align-self: center !important;
     margin-left: 10px;
     cursor: pointer;
 }
+
 .ste-header-phone {
     border-right: 1px solid #414550;
 }
@@ -958,7 +968,8 @@ img#loader1 {
     padding: 0px !important;
     margin: 0px !important;
 }
-.ste-top-container-border{
+
+.ste-top-container-border {
     border-bottom: 1px solid #D4D7E2;
 }
 
@@ -1091,14 +1102,16 @@ img#loader1 {
     border: 1px solid #c5c9d4 !important;
     border-radius: 5px;
 }
-.ste-pop-email{
+
+.ste-pop-email {
     margin-bottom: 10px;
     padding: 8px !important;
-    width:85%;
+    width: 85%;
     margin-left: 23px;
     border: 1px solid #c5c9d4 !important;
     border-radius: 5px;
 }
+
 .cke_chrome {
     border: 1px solid #c5c9d4;
     border-radius: 5px;
@@ -1233,11 +1246,13 @@ img#loader1 {
     font-size: 20px;
     cursor: pointer;
 }
+
 .mini .email-list-title {
     color: #494d53;
-    font-weight: 600 ;
+    font-weight: 600;
     font-size: 14px;
 }
+
 .mini .shouldShowWhenMinified {
     width: 50%;
 }
@@ -1256,19 +1271,25 @@ img#loader1 {
     font-size: 20px;
     cursor: pointer;
 }
+
 .normal .email-list-title {
     color: #494d53;
-    font-weight: 600 ;
+    font-weight: 600;
     font-size: 14px;
 }
-.address-text{
+
+.address-text {
     padding: 10px;
 }
-.popup-country{
+
+.popup-country {
     font-size: 13px !important;
     font-family: 'Open Sans', sans-serif !important;
     color: #6C757D !important;
+    height: auto !important;
 }
+
+
 /* report */
 
 .ste-coming-soon {
@@ -1404,20 +1425,20 @@ img#loader1 {
     text-align: center;
 }
 
-
-
 .ui-draggable-disabled {
     cursor: not-allowed;
     opacity: 0.5;
-  }
-  a.ui-draggable-disabled {
+}
+
+a.ui-draggable-disabled {
     color: currentColor;
-    display: inline-block;  /* For IE11/ MS Edge bug */
+    display: inline-block;
+    /* For IE11/ MS Edge bug */
     pointer-events: none;
     text-decoration: none;
-  }
+}
 
-  .help {
+.help {
     background-color: #2f333b;
     width: 20px;
     text-indent: 0px;
@@ -1439,40 +1460,50 @@ img#loader1 {
     position: absolute;
     margin-top: -8px;
     margin-left: 10px;
-  }
- /* tootl tip  */
- .ste-tool-tips{
-     text-decoration: underline;
-     font-weight: bold;
-     cursor: pointer;
- }  
-  [data-title]:hover::before {
+}
+
+
+/* tootl tip  */
+
+.ste-tool-tips {
+    text-decoration: underline;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+[data-title]:hover::before {
     content: attr(data-title);
     position: absolute;
     left: 10%;
     padding: 3px 6px;
-    margin-top:25px ;
+    margin-top: 25px;
     border-radius: 2px;
     background: #000;
     color: #fff;
     font-size: 12px;
     text-align: left;
-    width:175px
-  }
+    width: 175px
+}
+
+
 /* POP_UP_FORM */
+
 .temp_form_main .temp_form_header {
     border-bottom: 1px solid #ccc !important;
 }
-.temp_form_main .form_thumb img{
-height: 50px;
-width: 50px;
+
+.temp_form_main .form_thumb img {
+    height: 50px;
+    width: 50px;
 }
+
 .temp_form_main .form_content {
     font-size: 16px;
     font-weight: 600;
 }
-.tag_line{
-font-size: 14px;
+
+.tag_line {
+    font-size: 14px;
     font-weight: 500;
 }
 
@@ -1481,9 +1512,8 @@ font-size: 14px;
     right: 15px;
     margin-top: -32px;
 }
+
 .html_item_row_container .remove_bal_field {
-    
-    
     background: #efa067;
     border-radius: 20px;
     padding: 7px 8px;
@@ -1491,11 +1521,11 @@ font-size: 14px;
     font-size: 7px;
     border: 1px solid #f1f1f1;
     line-height: 7px;
-    
 }
 
-.stedb-col .remove_bal_field, .remove_social_bal_field, .remove_linkedin_bal_field {
-    
+.stedb-col .remove_bal_field,
+.remove_social_bal_field,
+.remove_linkedin_bal_field {
     background: #B8C0C9;
     border-radius: 20px;
     padding: 7px 8px;
@@ -1508,44 +1538,49 @@ font-size: 14px;
     line-height: 7px;
 }
 
-
 #emailPreviewModal.modal {
-    z-index:50000
+    z-index: 50000
 }
 
-#emailPreviewModal .modal-body .row{
-    padding:10px;
+#emailPreviewModal .modal-body .row {
+    padding: 10px;
     color: #000 !important;
 }
-#emailPreviewModal .modal-body .row.gray{
-    background: #e5e5e5;
 
+#emailPreviewModal .modal-body .row.gray {
+    background: #e5e5e5;
 }
 
-#emailPreviewModal .modal-body .row.bordered{
+#emailPreviewModal .modal-body .row.bordered {
     border: 1px solid #e5e5e5;
 }
 
-#formTemplateChoiceModal .modal-body .row{
+#formTemplateChoiceModal .modal-body .row {
     background: #d7e7f9;
     border: 1px solid #3688e1;
-    
     color: #3688e1 !important;
     margin: 10px;
     padding: 20px;
 }
 
-#formTemplateChoiceModal .modal-body .row:hover{
+#formTemplateChoiceModal .modal-body .row:hover {
     background: #2f333b;
     border: 1px solid #3688e1;
     color: #fff !important;
-} 
+}
 
 @-webkit-keyframes downarrow {
-    0% { -webkit-transform: translateY(0); opacity: 0.4 }
-    100% { -webkit-transform: translateY(0.4em); opacity: 0.9 }
-  }
-  .arrow {
+    0% {
+        -webkit-transform: translateY(0);
+        opacity: 0.4
+    }
+    100% {
+        -webkit-transform: translateY(0.4em);
+        opacity: 0.9
+    }
+}
+
+.arrow {
     border-color: transparent;
     border-style: solid;
     border-width: 0 2em;
@@ -1553,14 +1588,16 @@ font-size: 14px;
     text-indent: -9999px;
     transform-origin: 50% 50%;
     width: 0;
-    left:53%;
+    left: 53%;
     bottom: 110px;
-  }
-  .down {
+}
+
+.down {
     -webkit-animation: downarrow 0.6s infinite alternate ease-in-out;
-    border-top:2em solid;
-  }
-  .setting-card{
+    border-top: 2em solid;
+}
+
+.setting-card {
     position: relative;
     display: -ms-flexbox;
     display: flex;
@@ -1574,201 +1611,232 @@ font-size: 14px;
     background-clip: border-box;
     border: 1px solid rgba(0, 0, 0, 0.125);
     border-radius: 0.25rem;
-  }
-  #submit-setting-update #country{
-        max-width: 100%;
-    }  
-  .setting-card-body {
+}
+
+.popup-skip {
+    margin-right: 15px;
+}
+
+.popup-dont-show {
+    margin-left: 15px;
+}
+
+#submit-setting-update #country {
+    max-width: 100%;
+}
+
+.setting-card-body {
     -ms-flex: 1 1 auto;
     flex: 1 1 auto;
     padding: 1.25rem;
 }
-  /* Message Box on Drag Fields */
+
+
+/* Message Box on Drag Fields */
 
 .sp-container {
-	position: fixed;
-	top: 0px;
-	left: 0px;
-	width: 100%;
-	height: 100%;
-	z-index: 0;
-	background: -webkit-radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1) 5%, rgba(0, 0, 0, 0.2));
-	background: -moz-radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1) 5%, rgba(0, 0, 0, 0.2));
-	background: -ms-radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1) 5%, rgba(0, 0, 0, 0.2));
-	background: radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1) 5%, rgba(0, 0, 0, 0.2));
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    background: -webkit-radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1) 5%, rgba(0, 0, 0, 0.2));
+    background: -moz-radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1) 5%, rgba(0, 0, 0, 0.2));
+    background: -ms-radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1) 5%, rgba(0, 0, 0, 0.2));
+    background: radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1) 5%, rgba(0, 0, 0, 0.2));
 }
+
 .sp-container h2 {
-	position: absolute;
+    position: absolute;
     top: 50%;
     right: 5%;
-	line-height: 100px;
-	height: 90px;
-	margin-top: -50px;
-	font-size: 50px;
+    line-height: 100px;
+    height: 90px;
+    margin-top: -50px;
+    font-size: 50px;
     width: 100%;
-	text-align: center;
-	color: #5A6268;
-	-webkit-animation: blurFadeInOut 3s ease-in backwards;
-	-moz-animation: blurFadeInOut 3s ease-in backwards;
-	-ms-animation: blurFadeInOut 3s ease-in backwards;
-	animation: blurFadeInOut 3s ease-in backwards;
+    text-align: center;
+    color: #5A6268;
+    -webkit-animation: blurFadeInOut 3s ease-in backwards;
+    -moz-animation: blurFadeInOut 3s ease-in backwards;
+    -ms-animation: blurFadeInOut 3s ease-in backwards;
+    animation: blurFadeInOut 3s ease-in backwards;
 }
+
 @-webkit-keyframes blurFadeInOut {
-	0% {
-		opacity: 0;
-		-webkit-transform: scale(1.3);
-	}
-	20%, 75% {
-		opacity: 1;
-		-webkit-transform: scale(1);
-	}
-	100% {
-		opacity: 0;
-		-webkit-transform: scale(0);
-	}
+    0% {
+        opacity: 0;
+        -webkit-transform: scale(1.3);
+    }
+    20%,
+    75% {
+        opacity: 1;
+        -webkit-transform: scale(1);
+    }
+    100% {
+        opacity: 0;
+        -webkit-transform: scale(0);
+    }
 }
+
 @-webkit-keyframes blurFadeIn {
-	0% {
-		opacity: 0;
-		-webkit-transform: scale(1.3);
-	}
-	50% {
-		opacity: 0.5;
-		-webkit-transform: scale(1.1);
-	}
-	100% {
-		opacity: 1;
-		-webkit-transform: scale(1);
-	}
+    0% {
+        opacity: 0;
+        -webkit-transform: scale(1.3);
+    }
+    50% {
+        opacity: 0.5;
+        -webkit-transform: scale(1.1);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: scale(1);
+    }
 }
+
 @-webkit-keyframes fadeInBack {
-	0% {
-		opacity: 0.4;
-		-webkit-transform: scale(0);
-	}
-	50% {
-		opacity: 0.8;
-		-webkit-transform: scale(2);
-	}
-	100% {
-		opacity: 0.6;
-		-webkit-transform: scale(5);
-	}
+    0% {
+        opacity: 0.4;
+        -webkit-transform: scale(0);
+    }
+    50% {
+        opacity: 0.8;
+        -webkit-transform: scale(2);
+    }
+    100% {
+        opacity: 0.6;
+        -webkit-transform: scale(5);
+    }
 }
+
 @-webkit-keyframes fadeInRotate {
-	0% {
-		opacity: 0;
-		-webkit-transform: scale(0) rotate(360deg);
-	}
-	100% {
-		opacity: 1;
-		-webkit-transform: scale(1) rotate(0deg);
-	}
+    0% {
+        opacity: 0;
+        -webkit-transform: scale(0) rotate(360deg);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: scale(1) rotate(0deg);
+    }
 }
+
+
 /**/
 
 @-moz-keyframes blurFadeInOut {
-	0% {
-		opacity: 0;
-		-moz-transform: scale(1.3);
-	}
-	20%, 75% {
-		opacity: 1;
-		-moz-transform: scale(1);
-	}
-	100% {
-		opacity: 0;
-		-moz-transform: scale(0);
-	}
+    0% {
+        opacity: 0;
+        -moz-transform: scale(1.3);
+    }
+    20%,
+    75% {
+        opacity: 1;
+        -moz-transform: scale(1);
+    }
+    100% {
+        opacity: 0;
+        -moz-transform: scale(0);
+    }
 }
+
 @-moz-keyframes blurFadeIn {
-	0% {
-		opacity: 0;
-		-moz-transform: scale(1.3);
-	}
-	100% {
-		opacity: 1;
-		-moz-transform: scale(1);
-	}
+    0% {
+        opacity: 0;
+        -moz-transform: scale(1.3);
+    }
+    100% {
+        opacity: 1;
+        -moz-transform: scale(1);
+    }
 }
+
 @-moz-keyframes fadeInBack {
-	0% {
-		opacity: 0;
-		-moz-transform: scale(0);
-	}
-	50% {
-		opacity: 0.4;
-		-moz-transform: scale(2);
-	}
-	100% {
-		opacity: 0.2;
-		-moz-transform: scale(5);
-	}
+    0% {
+        opacity: 0;
+        -moz-transform: scale(0);
+    }
+    50% {
+        opacity: 0.4;
+        -moz-transform: scale(2);
+    }
+    100% {
+        opacity: 0.2;
+        -moz-transform: scale(5);
+    }
 }
+
 @-moz-keyframes fadeInRotate {
-	0% {
-		opacity: 0;
-		-moz-transform: scale(0) rotate(360deg);
-	}
-	100% {
-		opacity: 1;
-		-moz-transform: scale(1) rotate(0deg);
-	}
+    0% {
+        opacity: 0;
+        -moz-transform: scale(0) rotate(360deg);
+    }
+    100% {
+        opacity: 1;
+        -moz-transform: scale(1) rotate(0deg);
+    }
 }
+
+
 /**/
 
 @keyframes blurFadeInOut {
-	0% {
-		opacity: 0;
-		transform: scale(1.3);
-	}
-	20%, 75% {
-		opacity: 1;
-		transform: scale(1);
-	}
-	100% {
-		opacity: 0;
-		transform: scale(0);
-	}
+    0% {
+        opacity: 0;
+        transform: scale(1.3);
+    }
+    20%,
+    75% {
+        opacity: 1;
+        transform: scale(1);
+    }
+    100% {
+        opacity: 0;
+        transform: scale(0);
+    }
 }
+
 @keyframes blurFadeIn {
-	0% {
-		opacity: 0;
-		transform: scale(1.3);
-	}
-	50% {
-		opacity: 0.5;
-		transform: scale(1.1);
-	}
-	100% {
-		opacity: 1;
-		transform: scale(1);
-	}
+    0% {
+        opacity: 0;
+        transform: scale(1.3);
+    }
+    50% {
+        opacity: 0.5;
+        transform: scale(1.1);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
+
 @keyframes fadeInBack {
-	0% {
-		opacity: 0;
-		transform: scale(0);
-	}
-	50% {
-		opacity: 0.4;
-		transform: scale(2);
-	}
-	100% {
-		opacity: 0.2;
-		transform: scale(5);
-	}
+    0% {
+        opacity: 0;
+        transform: scale(0);
+    }
+    50% {
+        opacity: 0.4;
+        transform: scale(2);
+    }
+    100% {
+        opacity: 0.2;
+        transform: scale(5);
+    }
 }
+
 @keyframes fadeInRotate {
-	0% {
-		opacity: 0;
-		transform: scale(0) rotate(360deg);
-	}
-	100% {
-		opacity: 1;
-		transform: scale(1) rotate(0deg);
-	}
+    0% {
+        opacity: 0;
+        transform: scale(0) rotate(360deg);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1) rotate(0deg);
+    }
 }
-.input-field-error{
-    border:1px solid red !important;
+
+.input-field-error {
+    border: 1px solid red !important;
 }
